# Toolio

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-extra.txt
demo/: README.md  algebra_tutor.py  algebra_tutor.schema.json  arithmetic_calc.py  blind_obedience.py  country_extract.py  country_extract_cprofile.py  mlx_enhanced_features.py  re_act.py  zipcode.py
demo/reddit_newsletter/: README.md  reddit_newsletter.py  requirements.txt  subreddits.json
demo/researcher/: README.md  main.py
doc/: gettingstarted.md  index.md  pragmatics.md  tutorial.md
gettingstarted/: index.html
pragmatics/: index.html
pylib/: __about__.py  __init__.py  client.py  client_helper.py  common.py  http_impl.py  http_schematics.py  llm_helper.py  prompt_helper.py  responder.py  response_helper.py  schema_helper.py  toolcall.py  util.py
pylib/cli/: __init__.py  request.py  server.py
pylib/tool/: __init__.py  demo.py  math.py  schematics.py  temporal.py
resource/: language.toml
search/: search_index.json
test/: README.md  conftest.py  quick_check.py  test_conventional_prompt.py  test_custom_tools.py  test_model_manager.py  test_readme_examples.py  test_tool_calling.py
